Fix header spacing issues

--- a/client/styles/pages/view_proposal/index.scss
+++ b/client/styles/pages/view_proposal/index.scss
@@ -58,6 +58,10 @@ $discussion-title-font-size: 1.45rem;
     //
     .ProposalHeader {
         position: relative;
+        .snapshot-proposal-top {
+            display: flex;
+            border-bottom: 1px solid $background-color-light;
+        }
         .proposal-top {
             display: flex;
             padding-bottom: 20px;
